JEAP-7507: Simplify stream operation in EnvironmentRepositoryImplTest